--- a/packages/reflecta-backend/.eslintrc
+++ b/packages/reflecta-backend/.eslintrc
@@ -22,6 +22,12 @@
         "project": "./tsconfig.json"
     },
     "rules": {
+        "@typescript-eslint/no-throw-literal": [
+            0
+        ],
+        "class-methods-use-this": [
+            0
+        ],
         "import/order": [
             "error",
             {
@@ -219,6 +225,31 @@
                     {
                         "group": "parent",
                         "pattern": "../../../../constants",
+                        "position": "after"
+                    },
+                    {
+                        "group": "parent",
+                        "pattern": "./interfaces",
+                        "position": "after"
+                    },
+                    {
+                        "group": "parent",
+                        "pattern": "../interfaces",
+                        "position": "after"
+                    },
+                    {
+                        "group": "parent",
+                        "pattern": "../../interfaces",
+                        "position": "after"
+                    },
+                    {
+                        "group": "parent",
+                        "pattern": "../../../interfaces",
+                        "position": "after"
+                    },
+                    {
+                        "group": "parent",
+                        "pattern": "../../../../interfaces",
                         "position": "after"
                     }
                 ]
