--- a/packages/reflecta-backend/package.json
+++ b/packages/reflecta-backend/package.json
@@ -17,6 +17,7 @@
   "devDependencies": {
     "@types/cors": "^2.8.13",
     "@types/express": "^4.17.17",
+    "@types/jsonwebtoken": "^9.0.2",
     "@types/morgan": "^1.9.4",
     "@types/node": "^20.0.0",
     "nodemon": "^2.0.22",
