--- a/packages/reflecta-components/.stylelintrc.json
+++ b/packages/reflecta-components/.stylelintrc.json
@@ -27,7 +27,7 @@
         ],
         "at-rule-no-vendor-prefix": true,
         "block-no-empty": true,
-        "color-hex-length": "short",
+        "color-hex-length": "long",
         "color-named": "never",
         "color-no-hex": true,
         "color-no-invalid-hex": true,
@@ -128,7 +128,7 @@
         "scss/media-feature-value-dollar-variable": "always",
         "scss/no-duplicate-dollar-variables": true,
         "scss/no-duplicate-mixins": true,
-        "scss/operator-no-newline-after": true,
+        "scss/operator-no-newline-after": null,
         "scss/operator-no-unspaced": true,
         "scss/selector-nest-combinators": "always",
         "selector-attribute-quotes": "always",
