--- a/packages/reflecta-components/package.json
+++ b/packages/reflecta-components/package.json
@@ -15,8 +15,8 @@
     "@storybook/blocks": "^7.0.8",
     "@storybook/react": "^7.0.8",
     "@storybook/react-webpack5": "^7.0.8",
-    "@storybook/testing-library": "^0.0.14-next.2",
-    "@types/node": "^18.15.11",
+    "@storybook/testing-library": "^0.1.0",
+    "@types/node": "^20.2.1",
     "@types/react": "^18.0.33",
     "@types/react-dom": "^18.0.11",
     "autoprefixer": "^10.4.14",
@@ -45,7 +45,7 @@
     "stylelint-config-standard-scss": "^9.0.0",
     "stylelint-declaration-block-no-ignored-properties": "^2.7.0",
     "stylelint-order": "^6.0.3",
-    "stylelint-scss": "^4.6.0",
+    "stylelint-scss": "^5.0.0",
     "ts-loader": "^9.4.2",
     "typescript": "^5.0.3",
     "webpack": "^5.78.0",
@@ -75,9 +75,9 @@
     "config:local": "cross-env NODE_ENV=development WEBPACK_SERVER_PORT_COMPONENTS=3003",
     "develop": "npm run config:local concurrently --raw \"npm:lint --silent\" \"webpack-dev-server --open --config ./webpack.config.js --mode=development --port 3003\" \"npm:watch --silent\"",
     "lint": "concurrently --raw \"npm:lint:js --silent\" \"npm:lint:scss --silent\"",
-    "lint:fix": "concurrently --raw \"eslint . --ext .ts,.tsx,.js --fix\" \"stylelint src/**/*.scss  --color --allow-empty-input --fix\"",
+    "lint:fix": "concurrently --raw \"eslint . --ext .ts,.tsx,.js --fix\" \"stylelint src/**/*  --color --allow-empty-input --fix\"",
     "lint:js": "eslint . --ext .ts,.tsx,.js",
-    "lint:scss": "stylelint src/**/*.scss --color --allow-empty-input",
+    "lint:scss": "stylelint src/**/* --color --allow-empty-input",
     "pre-commit": "cross-env FORCE_COLOR=true lint-staged",
     "prettier": "prettier --write \"src/**/*.scss\"",
     "start": "npm run develop",
