--- a/packages/reflecta-ui/package.json
+++ b/packages/reflecta-ui/package.json
@@ -68,9 +68,9 @@
     "config:local": "cross-env FEDERATED_COMPONENTS_URL=reflecta_components@http://localhost:3003/remoteEntry.js NODE_ENV=development WEBPACK_SERVER_PORT_UI=3000",
     "develop": "npm run config:local concurrently --raw \"npm:lint --silent\" \"webpack-dev-server --open --config ./webpack.config.js --mode=development\" \"npm:watch --silent\"",
     "lint": "concurrently --raw \"npm:lint:js --silent\" \"npm:lint:scss --silent\"",
-    "lint:fix": "concurrently --raw \"eslint . --ext .ts,.tsx,.js --fix\" \"stylelint src/**/*.scss  --color --allow-empty-input --fix\"",
+    "lint:fix": "concurrently --raw \"eslint . --ext .ts,.tsx,.js --fix\" \"stylelint src/**/*  --color --allow-empty-input --fix\"",
     "lint:js": "eslint . --ext .ts,.tsx,.js",
-    "lint:scss": "stylelint src/**/*.scss --color --allow-empty-input",
+    "lint:scss": "stylelint src/**/* --color --allow-empty-input",
     "pre-commit": "cross-env FORCE_COLOR=true lint-staged",
     "prettier": "prettier --write \"src/**/*.scss\"",
     "start": "npm run develop",
