--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -14,6 +14,9 @@
     "[jsonc]": {
         "editor.defaultFormatter": "vscode.json-language-features"
     },
+    "[scss]": {
+        "editor.defaultFormatter": "stylelint.vscode-stylelint"
+    },
     "editor.defaultFormatter": "dbaeumer.vscode-eslint",
     "eslint.codeActionsOnSave.mode": "all",
     "eslint.debug": true,
@@ -24,5 +27,20 @@
         "packages/reflecta-backend",
         "packages/reflecta-components",
         "packages/reflecta-ui",
-    ]
+    ],
+    "stylelint.validate": [
+        "css",
+        "less",
+        "postcss",
+        "scss"
+    ],
+    "stylelint.snippet": [
+        "css",
+        "less",
+        "postcss",
+        "scss"
+    ],
+    "[scss]": {
+        "editor.defaultFormatter": "stylelint.vscode-stylelint"
+    }
 }
