--- a/packages/reflecta-backend/package.json
+++ b/packages/reflecta-backend/package.json
@@ -1,6 +1,7 @@
 {
   "author": "Sean McQuay",
   "dependencies": {
+    "@sendgrid/mail": "^7.7.0",
     "bcrypt": "^5.1.0",
     "cors": "^2.8.5",
     "express": "^4.18.2",
@@ -15,6 +16,7 @@
   },
   "description": "Journaling application backend meant to help offer analysis and insights into journal entries.",
   "devDependencies": {
+    "@types/bcrypt": "^5.0.0",
     "@types/cors": "^2.8.13",
     "@types/express": "^4.17.17",
     "@types/jsonwebtoken": "^9.0.2",
