--- a/packages/reflecta-components/.stylelintrc.json
+++ b/packages/reflecta-components/.stylelintrc.json
@@ -98,7 +98,7 @@
         "scss/at-rule-no-unknown": true,
         "scss/declaration-nested-properties": "never",
         "scss/declaration-nested-properties-no-divided-groups": true,
-        "scss/dollar-variable-colon-newline-after": "always-multi-line",
+        "scss/dollar-variable-colon-newline-after": null,
         "scss/dollar-variable-colon-space-after": "always-single-line",
         "scss/dollar-variable-colon-space-before": "never",
         "scss/dollar-variable-empty-line-before": [
