Force working save.

--- a/packages/reflecta-components/.eslintrc
+++ b/packages/reflecta-components/.eslintrc
@@ -28,6 +28,9 @@
             "rules": {
                 "no-console": [
                     0
+                ],
+                "global-require": [
+                    0
                 ]
             }
         }
