--- a/packages/reflecta-components/tsconfig.json
+++ b/packages/reflecta-components/tsconfig.json
@@ -2,7 +2,24 @@
     "compilerOptions": {
         "declaration": true,
         "jsx": "react-jsx",
-        "outDir": "./declarations"
+        "outDir": "./declarations",
+        "paths": {
+            "@components/*": [
+                "./src/components/*"
+            ],
+            "@constants/*": [
+                "./src/constants.ts"
+            ],
+            "@modules/*": [
+                "./src/modules/*"
+            ],
+            "@utils/*": [
+                "./src/utils/*"
+            ],
+            "@styles/*": [
+                "./src/styles/*"
+            ]
+        }
     },
     "exclude": [
         "./dist/**/*"
