--- a/packages/reflecta-backend/.eslintrc
+++ b/packages/reflecta-backend/.eslintrc
@@ -33,7 +33,8 @@
             {
                 "alphabetize": {
                     "caseInsensitive": true,
-                    "order": "asc"
+                    "order": "asc",
+                    "orderImportKind": "asc"
                 },
                 "groups": [
                     "external",
@@ -44,107 +45,27 @@
                 "pathGroups": [
                     {
                         "group": "parent",
-                        "pattern": "./controllers/*",
+                        "pattern": "@controllers/*",
                         "position": "after"
                     },
                     {
                         "group": "parent",
-                        "pattern": "../controllers/*",
+                        "pattern": "@models/*",
                         "position": "after"
                     },
                     {
                         "group": "parent",
-                        "pattern": "../../controllers/*",
+                        "pattern": "@services/*",
                         "position": "after"
                     },
                     {
                         "group": "parent",
-                        "pattern": "../../../controllers/*",
+                        "pattern": "@utils/*",
                         "position": "after"
                     },
                     {
                         "group": "parent",
-                        "pattern": "../../../../controllers/*",
-                        "position": "after"
-                    },
-                    {
-                        "group": "parent",
-                        "pattern": "./models/*",
-                        "position": "after"
-                    },
-                    {
-                        "group": "parent",
-                        "pattern": "../models/*",
-                        "position": "after"
-                    },
-                    {
-                        "group": "parent",
-                        "pattern": "../../models/*",
-                        "position": "after"
-                    },
-                    {
-                        "group": "parent",
-                        "pattern": "../../../models/*",
-                        "position": "after"
-                    },
-                    {
-                        "group": "parent",
-                        "pattern": "../../../../models/*",
-                        "position": "after"
-                    },
-                    {
-                        "group": "parent",
-                        "pattern": "./services/*",
-                        "position": "after"
-                    },
-                    {
-                        "group": "parent",
-                        "pattern": "../services/*",
-                        "position": "after"
-                    },
-                    {
-                        "group": "parent",
-                        "pattern": "../../services/*",
-                        "position": "after"
-                    },
-                    {
-                        "group": "parent",
-                        "pattern": "../../../services/*",
-                        "position": "after"
-                    },
-                    {
-                        "group": "parent",
-                        "pattern": "../../../../services/*",
-                        "position": "after"
-                    },
-                    {
-                        "group": "parent",
-                        "pattern": "./utils/*",
-                        "position": "after"
-                    },
-                    {
-                        "group": "parent",
-                        "pattern": "../utils/*",
-                        "position": "after"
-                    },
-                    {
-                        "group": "parent",
-                        "pattern": "../../utils/*",
-                        "position": "after"
-                    },
-                    {
-                        "group": "parent",
-                        "pattern": "../../../utils/*",
-                        "position": "after"
-                    },
-                    {
-                        "group": "parent",
-                        "pattern": "../../../../utils/*",
-                        "position": "after"
-                    },
-                    {
-                        "group": "parent",
-                        "pattern": "./middleware",
+                        "pattern": "@middleware/*",
                         "position": "after"
                     },
                     {
@@ -159,99 +80,12 @@
                     },
                     {
                         "group": "parent",
-                        "pattern": "./Auth",
-                        "position": "after"
-                    },
-                    {
-                        "group": "parent",
-                        "pattern": "../Auth",
-                        "position": "after"
-                    },
-                    {
-                        "group": "parent",
-                        "pattern": "../../Auth",
-                        "position": "after"
-                    },
-                    {
-                        "group": "parent",
-                        "pattern": "../../../Auth",
-                        "position": "after"
-                    },
-                    {
-                        "group": "parent",
-                        "pattern": "./RateLimiter",
-                        "position": "after"
-                    },
-                    {
-                        "group": "parent",
-                        "pattern": "../RateLimiter",
-                        "position": "after"
-                    },
-                    {
-                        "group": "parent",
-                        "pattern": "../../RateLimiter",
-                        "position": "after"
-                    },
-                    {
-                        "group": "parent",
-                        "pattern": "../../../RateLimiter",
-                        "position": "after"
-                    },
-                    {
-                        "group": "parent",
-                        "pattern": "./routes/*",
-                        "position": "after"
-                    },
-                    {
-                        "group": "parent",
-                        "pattern": "./constants",
-                        "position": "after"
-                    },
-                    {
-                        "group": "parent",
-                        "pattern": "../constants",
-                        "position": "after"
-                    },
-                    {
-                        "group": "parent",
-                        "pattern": "../../constants",
-                        "position": "after"
-                    },
-                    {
-                        "group": "parent",
-                        "pattern": "../../../constants",
-                        "position": "after"
-                    },
-                    {
-                        "group": "parent",
-                        "pattern": "../../../../constants",
-                        "position": "after"
-                    },
-                    {
-                        "group": "parent",
-                        "pattern": "./interfaces",
-                        "position": "after"
-                    },
-                    {
-                        "group": "parent",
-                        "pattern": "../interfaces",
-                        "position": "after"
-                    },
-                    {
-                        "group": "parent",
-                        "pattern": "../../interfaces",
-                        "position": "after"
-                    },
-                    {
-                        "group": "parent",
-                        "pattern": "../../../interfaces",
-                        "position": "after"
-                    },
-                    {
-                        "group": "parent",
-                        "pattern": "../../../../interfaces",
+                        "pattern": "@constants",
                         "position": "after"
                     }
+                ],
+                "pathGroupsExcludedImportTypes": [
+                    "builtin"
                 ]
             }
         ]
