--- a/packages/reflecta-backend/tsconfig.json
+++ b/packages/reflecta-backend/tsconfig.json
@@ -4,7 +4,27 @@
         "module": "ESNext",
         "moduleResolution": "Node",
         "noUnusedParameters": false,
-        "outDir": "./dist"
+        "outDir": "./dist",
+        "paths": {
+            "@constants": [
+                "./src/constants.ts"
+            ],
+            "@controllers/*": [
+                "./src/controllers/*"
+            ],
+            "@middleware/*": [
+                "./src/middleware/*"
+            ],
+            "@models/*": [
+                "./src/models/*"
+            ],
+            "@services/*": [
+                "./src/services/*"
+            ],
+            "@utils/*": [
+                "./src/utils/*"
+            ]
+        }
     },
     "exclude": [
         "./dist/**/*"
