Updated eslint config.

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,11 +1,5 @@
 {
     "[javascript]": {
-        "editor.defaultFormatter": "vscode.typescript-language-features"
-    },
-    "[typescript]": {
-        "editor.defaultFormatter": "dbaeumer.vscode-eslint"
-    },
-    "[typescriptreact]": {
         "editor.defaultFormatter": "dbaeumer.vscode-eslint"
     },
     "[json]": {
@@ -16,6 +10,15 @@
     },
     "[scss]": {
         "editor.defaultFormatter": "stylelint.vscode-stylelint"
+    },
+    "[typescript]": {
+        "editor.defaultFormatter": "dbaeumer.vscode-eslint"
+    },
+    "[typescriptreact]": {
+        "editor.defaultFormatter": "dbaeumer.vscode-eslint"
+    },
+    "editor.codeActionsOnSave": {
+        "source.fixAll.eslint": true
     },
     "editor.defaultFormatter": "dbaeumer.vscode-eslint",
     "eslint.codeActionsOnSave.mode": "all",
@@ -28,19 +31,16 @@
         "packages/reflecta-components",
         "packages/reflecta-ui",
     ],
-    "stylelint.validate": [
-        "css",
-        "less",
-        "postcss",
-        "scss"
-    ],
     "stylelint.snippet": [
         "css",
         "less",
         "postcss",
         "scss"
     ],
-    "[scss]": {
-        "editor.defaultFormatter": "stylelint.vscode-stylelint"
-    }
+    "stylelint.validate": [
+        "css",
+        "less",
+        "postcss",
+        "scss"
+    ]
 }
