--- a/packages/reflecta-ui/.eslintrc
+++ b/packages/reflecta-ui/.eslintrc
@@ -84,6 +84,11 @@
                     },
                     {
                         "group": "parent",
+                        "pattern": "@routes",
+                        "position": "after"
+                    },
+                    {
+                        "group": "parent",
                         "pattern": "@constants",
                         "position": "after"
                     },
