--- a/packages/reflecta-ui/tsconfig.json
+++ b/packages/reflecta-ui/tsconfig.json
@@ -15,6 +15,9 @@
             "@modules/*": [
                 "./src/modules/*"
             ],
+            "@routes": [
+                "./src/routes.ts"
+            ],
             "@services/*": [
                 "./src/services/*"
             ],
