--- a/packages/reflecta-backend/tsconfig.json
+++ b/packages/reflecta-backend/tsconfig.json
@@ -1,28 +1,30 @@
 {
     "compilerOptions": {
+        "rootDir": "./",
+        "baseUrl": "./",
         "esModuleInterop": true,
-        "module": "ESNext",
+        "module": "commonjs",
         "moduleResolution": "Node",
         "noUnusedParameters": false,
         "outDir": "./dist",
         "paths": {
             "@constants": [
-                "./src/constants.ts"
+                "src/constants.ts"
             ],
             "@controllers/*": [
-                "./src/controllers/*"
+                "src/controllers/*"
             ],
             "@middleware/*": [
-                "./src/middleware/*"
+                "src/middleware/*"
             ],
             "@models/*": [
-                "./src/models/*"
+                "src/models/*"
             ],
             "@services/*": [
-                "./src/services/*"
+                "src/services/*"
             ],
             "@utils/*": [
-                "./src/utils/*"
+                "src/utils/*"
             ]
         }
     },
