--- a/packages/reflecta-backend/.eslintrc
+++ b/packages/reflecta-backend/.eslintrc
@@ -9,7 +9,8 @@
     "overrides": [
         {
             "files": [
-                "./static/*"
+                "./static/*",
+                "./sequelize/*"
             ],
             "rules": {
                 "import/no-extraneous-dependencies": [
