--- a/packages/reflecta-backend/package.json
+++ b/packages/reflecta-backend/package.json
@@ -23,6 +23,7 @@
     "@types/morgan": "^1.9.4",
     "@types/node": "^20.2.5",
     "nodemon": "^2.0.22",
+    "sequelize": "^6.32.0",
     "ts-node": "^10.9.1",
     "tsc-alias": "^1.8.6",
     "tsconfig-paths": "^4.2.0",
