--- a/packages/reflecta-backend/package.json
+++ b/packages/reflecta-backend/package.json
@@ -2,6 +2,7 @@
   "author": "Sean McQuay",
   "dependencies": {
     "@sendgrid/mail": "^7.7.0",
+    "@types/uuid": "^9.0.2",
     "bcrypt": "^5.1.0",
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
@@ -12,12 +13,14 @@
     "jsonwebtoken": "^9.0.0",
     "morgan": "^1.10.0",
     "mysql2": "^3.2.4",
+    "uuid": "^9.0.0",
     "winston": "^3.8.2",
     "winston-daily-rotate-file": "^4.7.1"
   },
   "description": "Journaling application backend meant to help offer analysis and insights into journal entries.",
   "devDependencies": {
     "@types/bcrypt": "^5.0.0",
+    "@types/cookie-parser": "^1.4.3",
     "@types/cors": "^2.8.13",
     "@types/express": "^4.17.17",
     "@types/jsonwebtoken": "^9.0.2",
