Revised code structure to support lazy importing views.

--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -1,34 +1,27 @@
-// For format details, see https://aka.ms/devcontainer.json. For config options, see the
-// README at: https://github.com/devcontainers/templates/tree/main/src/debian
 {
 	"name": "Debian",
-	// Or use a Dockerfile or Docker Compose file. More info: https://containers.dev/guide/dockerfile
 	"image": "mcr.microsoft.com/devcontainers/base:bullseye",
 	"postCreateCommand": "bash -i ./scripts/postCreateCommand.sh",
 	"customizations": {
 		"vscode": {
 			"extensions": [
 				"Asuka.insertnumbers",
+				"cssho.vscode-svgviewer",
 				"dbaeumer.vscode-eslint",
 				"deerawan.vscode-faker",
 				"eamodio.gitlens",
 				"GitHub.vscode-github-actions",
 				"mrmlnc.vscode-csscomb",
+				"mrmlnc.vscode-scss",
 				"streetsidesoftware.code-spell-checker",
 				"stylelint.vscode-stylelint",
 				"Tyriar.lorem-ipsum",
+				"Tyriar.sort-lines",
 				"zengxingxin.sort-js-object-keys"
 			]
 		}
-	}
-	// Features to add to the dev container. More info: https://containers.dev/features.
-	// "features": {},
-	// Use 'forwardPorts' to make a list of ports inside the container available locally.
-	// "forwardPorts": [
-	// 	22
-	// ]
-	// Configure tool-specific properties.
-	// "customizations": {},
-	// Uncomment to connect as root instead. More info: https://aka.ms/dev-containers-non-root.
-	// "remoteUser": "root"
+	},
+	"forwardPorts": [
+		3306
+	]
 }
