--- a/packages/reflecta-ui/tsconfig.json
+++ b/packages/reflecta-ui/tsconfig.json
@@ -1,6 +1,8 @@
 {
     "compilerOptions": {
         "jsx": "react-jsx",
+        "module": "esnext",
+        "moduleResolution": "node",
         "outDir": "./dist",
         "paths": {
             "@assets/*": [
